deployment/apps/node-identifier/daemon-set.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: node-identifier-daemonset
  namespace: node-identifier
spec:
  selector:
    matchLabels:
      app: node-identifier-app
  template:
    metadata:
      labels:
        app: node-identifier-app
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        command: ["/bin/sh", "-c"]
        args:
          - "echo \"{ \\\"nodeName\\\": \\\"${NODE_NAME}\\\", \\\"podName\\\": \\\"${POD_NAME}\\\" }\" > /usr/share/nginx/html/index.html && nginx -g 'daemon off;'"
        resources:
          limits:
            cpu: "2000m"
            memory: "4Gi"
